--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/three": "^0.182.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
     "googleapis": "^126.0.0",
     "groq-sdk": "^0.3.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.300.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
