fix: resolve r3f compatibility crash, enhance onboarding stability, and update types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,13 +25,18 @@
             "@/*": [
                 "./*"
             ]
-        }
+        },
+        "typeRoots": [
+            "./node_modules/@types",
+            "./types"
+        ]
     },
     "include": [
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
-        ".next/types/**/*.ts"
+        ".next/types/**/*.ts",
+        "types/**/*.d.ts"
     ],
     "exclude": [
         "node_modules"
